test/spec_vectors/simd_splat/fail/module_3.wat
(module (func (result v128) i8x16.splat (f32.const 0.0)))